# shimmer

./: .gitignore  Cargo.toml  README.md
examples/basic/: Cargo.toml  README.md
examples/basic/hello/: Makefile  hello.c
examples/basic/src/: lib.rs
examples/logger/: Cargo.toml  README.md
examples/logger/src/: lib.rs  log4rs.yml
shimmer-macro/: Cargo.toml  lib.rs
shimmer-macro/src/: lib.rs
shimmer-simple_logger/: Cargo.toml  README.md
shimmer-simple_logger/src/: lib.rs
shimmer-trait/: Cargo.toml
shimmer-trait/src/: lib.rs
src/: lib.rs
