[package]
name = "logger-shimmer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "logger"
crate_type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.141"
redhook = "2.0.0"
shimmer = { path = "../.." }
simple_logger = {path = "../../rust-simple_logger/"}
log = "0.4.0"
